RESOLVED FIXED34316
[Gtk] Apple trailers don't play anymore
https://bugs.webkit.org/show_bug.cgi?id=34316
Summary [Gtk] Apple trailers don't play anymore
Philippe Normand
Reported 2010-01-29 01:44:09 PST
Because someone at Cuppertino reactivated the Quicktime user-agent filter...
Attachments
Fake QuickTime when accessing movie trailers (1.81 KB, patch)
2010-01-29 01:49 PST, Philippe Normand
no flags
Philippe Normand
Comment 1 2010-01-29 01:49:29 PST
Created attachment 47690 [details] Fake QuickTime when accessing movie trailers
Gustavo Noronha (kov)
Comment 2 2010-01-29 05:11:50 PST
Comment on attachment 47690 [details] Fake QuickTime when accessing movie trailers User agent checking is bad behaviour.
WebKit Commit Bot
Comment 3 2010-01-29 05:29:09 PST
Comment on attachment 47690 [details] Fake QuickTime when accessing movie trailers Clearing flags on attachment: 47690 Committed r54056: <http://trac.webkit.org/changeset/54056>
WebKit Commit Bot
Comment 4 2010-01-29 05:29:14 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.