2010-01-29  Philippe Normand  <pnormand@igalia.com>

Reviewed by Gustavo Noronha Silva.

        [Gtk] Apple trailers don't play anymore
        https://bugs.webkit.org/show_bug.cgi?id=34316

        Fake QuickTime when accessing movie trailers.

        * platform/graphics/gtk/MediaPlayerPrivateGStreamer.cpp:
        (WebCore::mediaPlayerPrivateSourceChangedCallback):

Canonical link: https://commits.webkit.org/45423@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@54056 268f45cc-cd09-0410-ab3c-d52691b4dbfc